@@ -21,6 +21,8 @@ Version 1.7.7
        authenticating. (Stefan)
 - BUG: Issue #243: deleting rev-selecting log
        dialog can cause a crash. (Stefan)
+- BUG: Issue #244: Crash with hotkeys in
+       TortoiseMerge. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
